# django-magic-authorization

./: .ai-disclaimer.json  .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml
src/django_magic_authorization/: admin.py  middleware.py  models.py  settings.py  signals.py  urls.py
src/django_magic_authorization/management/commands/: cleanup_expired_tokens.py
src/django_magic_authorization/migrations/: 0001_initial.py  0002_alter_accesstoken_token.py  0003_accesstoken_expires_at_accesstoken_max_uses.py
src/django_magic_authorize/: admin.py  apps.py  middleware.py  models.py  urls.py
src/django_magic_authorize/migrations/: 0001_initial.py
tests/: handlers.py  settings.py  test_admin.py  test_django_magic_authorize.py  test_middleware.py  test_settings.py  test_signals.py  test_token_limits.py  test_urls.py
tests/templates/: 403.html
