[project]
name = "django-magic-authorize"
version = "0.1.0"
description = "Add magic authorization links to your django project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Django>=5.2"]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

